# freespec-guess

./: .gitignore  README.md  _CoqProject  dune-project  freespec-guess.opam
ffi/: console.ml  console.mli  dune
src/: Guess.v  dune  guess.v
